--- a/sys_conf.yml
+++ b/sys_conf.yml
@@ -2,7 +2,7 @@ sound_device:
   input: 0 # your input device / vb out
   output: 1 #your output device/ vb in
 version: 3.0
-os: 'linux'
+os: 'win'
 dated: '02/08/2024 @ 7:32 PM'
 running_mode : 'TRY' # if you have to run try.py make it "TRY" else "PRO"
 auto_unpause: True # its value should be True or False to make auto pause/unpause ; Pleae check the spelling and case; it should be exactly that I specified
